--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -6,12 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".ActivityDatos">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tollbar_db"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edt_nombre"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:hint="Nombre"
+        app:layout_constraintTop_toBottomOf="@+id/tollbar_db" />
+
+    <EditText
+        android:id="@+id/edt_telefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:hint="Teléfono"
+        app:layout_constraintTop_toBottomOf="@+id/edt_nombre" />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="#000"
+        android:layout_marginTop="12dp"
         android:dividerHeight="1dp"
-        app:layout_constraintBottom_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_telefono" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
